--- a/.github/workflows/wRetryActionPush.yml
+++ b/.github/workflows/wRetryActionPush.yml
@@ -152,3 +152,10 @@ jobs :
       && !startsWith( github.event.head_commit.message, '.' )
       && !startsWith( github.event.head_commit.message, 'Merge' )
     uses : Wandalen/wretry.action/.github/workflows/JobContextActionTest.yml@master
+
+  matrix_context_action :
+    if : |
+      !startsWith( github.event.head_commit.message, 'version' )
+      && !startsWith( github.event.head_commit.message, '.' )
+      && !startsWith( github.event.head_commit.message, 'Merge' )
+    uses : Wandalen/wretry.action/.github/workflows/MatrixContextActionTest.yml@master
