--- a/action.yml
+++ b/action.yml
@@ -23,12 +23,12 @@ inputs:
     description: 'Get runner secret key. It is autooption to extends context `github` for an external action. Not documented in file `Readme.md`.'
     required: false
     default: ${{ github.token }}
-  job_status:
-    description: 'Get job status. It is autooption to extends context `job` for an external action. Not documented in file `Readme.md`.'
+  job_context:
+    description: 'Get job context. It is autooption to pass context `job` into an external action. Not documented in file `Readme.md`.'
     required: false
-    default: ${{ job.status }}
-  matrix:
-    description: 'Get matrix context. It is autooption to pass context `matrix` for an external action. Not documented in file `Readme.md`.'
+    default: ${{ toJSON( job ) }}
+  matrix_context:
+    description: 'Get matrix context. It is autooption to pass context `matrix` into an external action. Not documented in file `Readme.md`.'
     required: false
     default: ${{ toJSON( matrix ) }}
   attempt_limit:
