Update workflows, sync with workflows for composite action

--- a/.github/workflows/MatrixContextActionTest.yml
+++ b/.github/workflows/MatrixContextActionTest.yml
@@ -1,5 +1,6 @@
 
 name : matrix_context
+
 on : [ workflow_call ]
 
 jobs :
@@ -7,7 +8,7 @@ jobs :
   fast :
     strategy :
       matrix :
-        os : [ ubuntu-latest ]
+        os : [ ubuntu-latest, windows-latest, macos-latest ]
     runs-on : ${{ matrix.os }}
     steps :
     - name : Run action with job status
@@ -16,4 +17,3 @@ jobs :
         action : dmvict/test.action@defaults_from_matrix_context
         attempt_limit : 3
         attempt_delay: 1000
-
