Extend workflows `JsAction*`, add git config command

--- a/.github/workflows/JsActionPullRequest.yml
+++ b/.github/workflows/JsActionPullRequest.yml
@@ -28,6 +28,7 @@ jobs :
         git config --global user.name "Testing"
         git config --global pull.rebase false
         git config --global init.defaultBranch master
+        git config --system core.longpaths true
     - uses : actions/checkout@v2
       with :
         fetch-depth: 2
