--- a/action.yml
+++ b/action.yml
@@ -20,7 +20,7 @@ inputs:
     description: 'Setup working directory for the action. Works with only commands. Default is `github.workspace` path.'
     required: false
   env_context:
-    description: 'Pass context `env` into an external action. Action cannot resolve separate environments of workflow at the startup and provide all environments. If you need valid context `env`, then add option `env_context : ${{ toJSON( env ) }}`.'
+    description: 'Pass context `env` into an external action. Action cannot resolve separate environments of workflow at the startup and provide all environments. If you need valid context `env`, then add option `env_context` with environments.'
     required: false
     default: '{}'
   github_context:
