--- a/will.yml
+++ b/will.yml
@@ -360,6 +360,9 @@ step:
   tag.js_action:
     inherit: git.tag
     tag: 'v{about::version}_js_action'
+  tag.major:
+    inherit: js.run
+    js: '{path::step}/TagMajorStep.s'
   push:
     inherit: git.push
     dirPath: .
@@ -392,6 +395,7 @@ build:
       - add
       - commit
       - tag
+      - tag.major
       - push
       - release
   action.release:
@@ -418,6 +422,7 @@ build:
       - add
       - commit
       - tag
+      - tag.major
       - push
       - release
   doc.export:
