--- a/action.yml
+++ b/action.yml
@@ -29,10 +29,15 @@ inputs:
     description: A delay between attempts in ms
     required: false
     default: 0
+outputs:
+  outputs:
+    description: "A pretty print JSON map with outputs from the wrapped action."
+    value: ${{ toJSON( steps.retry.outputs ) }}
 runs:
   using: composite
   steps:
     - name: retry
+      id: retry
       uses: Wandalen/wretry.action@v1.1.0_js_action
       with:
         action: '${{ inputs.action }}'
