--- a/action.yml
+++ b/action.yml
@@ -31,14 +31,14 @@ inputs:
     default: 0
 outputs:
   outputs:
-    description: "A pretty print JSON map with outputs from the wrapped action."
-    value: ${{ toJSON( steps.retry.outputs ) }}
+    description: A pretty print JSON map with outputs from the wrapped action.
+    value: '${{ toJSON( steps.retry.outputs ) }}'
 runs:
   using: composite
   steps:
     - name: retry
       id: retry
-      uses: Wandalen/wretry.action@v1.1.0_js_action
+      uses: Wandalen/wretry.action@v1.2.0_js_action
       with:
         action: '${{ inputs.action }}'
         command: '${{ inputs.command }}'
