--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
   ],
   "dependencies": {
     "wgittools": "alpha",
-    "github-actions-parser": "0.26.0",
+    "github-actions-parser": "dmvict/github-actions-parser#inputs_context_dist",
     "@actions/core": "1.10.0"
   },
   "devDependencies": {
