--- a/action.yml
+++ b/action.yml
@@ -36,7 +36,7 @@ inputs:
     required: false
     default: ${{ toJSON( matrix ) }}
   inputs_context:
-    description: 'Pass context `inputs` into an external action. The action cannot resolve context `inputs` and resolve all inputs. If you need valid context `inputs`, then add option `inputs_context : ${{ toJSON( inputs ) }}`.'
+    description: 'Pass context `inputs` into an external action. The action cannot resolve context `inputs` and resolve all inputs. If you need valid context `inputs`, then add option as described in `Readme.md`.'
     required: false
     default: '{}'
   attempt_limit:
