--- a/will.yml
+++ b/will.yml
@@ -1,6 +1,6 @@
 about:
   name: wretry.action
-  version: 1.4.1
+  version: 1.4.2
   description: Retries an Github Action step on failure
   enabled: 0
   author: Kostiantyn Wandalen <wandalen@obox.systems>
@@ -174,7 +174,7 @@ reflector:
       maskAll:
         excludeAny:
           - !<tag:yaml.org,2002:js/regexp> /@actions/
-          - !<tag:yaml.org,2002:js/regexp> /@fastify/busboy/
+          - !<tag:yaml.org,2002:js/regexp> /@fastify\/busboy/
           - !<tag:yaml.org,2002:js/regexp> /argparse/
           - !<tag:yaml.org,2002:js/regexp> /bindings/
           - !<tag:yaml.org,2002:js/regexp> /chevrotain/
