--- a/will.yml
+++ b/will.yml
@@ -174,6 +174,7 @@ reflector:
       maskAll:
         excludeAny:
           - !<tag:yaml.org,2002:js/regexp> /@actions/
+          - !<tag:yaml.org,2002:js/regexp> /@fastify\/busboy/
           - !<tag:yaml.org,2002:js/regexp> /argparse/
           - !<tag:yaml.org,2002:js/regexp> /bindings/
           - !<tag:yaml.org,2002:js/regexp> /chevrotain/
@@ -187,6 +188,7 @@ reflector:
           - !<tag:yaml.org,2002:js/regexp> /signal-exit/
           - !<tag:yaml.org,2002:js/regexp> /tunnel/
           - !<tag:yaml.org,2002:js/regexp> /uuid/
+          - !<tag:yaml.org,2002:js/regexp> /undici/
           - !<tag:yaml.org,2002:js/regexp> /yaml-ast-parser/
           - !<tag:yaml.org,2002:js/regexp> /Joined.s/
 step:
