--- a/.github/workflows/JsActionPublish.yml
+++ b/.github/workflows/JsActionPublish.yml
@@ -32,9 +32,9 @@ jobs :
     - name : Setup git for windows
       if : ${{ matrix.os == 'windows-latest' }}
       run : git config --system core.longpaths true
-    - uses : actions/checkout@v3
-      with :
-        fetch-depth: 2
+    - uses : actions/checkout@v4
+      with:
+        ref: js_action
     - name : ${{ matrix.node-version }}
       uses : Wandalen/wretry.action@master
       with :
