--- a/.github/workflows/JsActionPublish.yml
+++ b/.github/workflows/JsActionPublish.yml
@@ -33,9 +33,9 @@ jobs :
     - name : Setup git for windows
       if : ${{ matrix.os == 'windows-latest' }}
       run : git config --system core.longpaths true
-    - uses : actions/checkout@v2
+    - uses : actions/checkout@v4
       with :
-        fetch-depth: 2
+        ref: js_action
     - name : ${{ matrix.node-version }}
       uses : Wandalen/wretry.action@master
       with :
