--- a/.github/workflows/JsActionPublish.yml
+++ b/.github/workflows/JsActionPublish.yml
@@ -19,7 +19,7 @@ jobs :
       fail-fast : false
       matrix :
         os : [ ubuntu-latest, windows-latest, macos-latest ]
-        node-version : [ 12.9.1, 14.x, 16.x, 18.x ]
+        node-version : [ 18.x, 20.x ]
     if : "startsWith( github.event.head_commit.message, 'version' ) && startsWith( github.ref, 'refs/tags/v' )"
     runs-on : ${{ matrix.os }}
     steps :
