--- a/action.yml
+++ b/action.yml
@@ -51,6 +51,10 @@ inputs:
     description: 'Set time out in ms for entire step including all retries. By default actions sets no time out.'
     required: false
     default: false
+  github_token:
+    description: 'A token to access private actions. Does not required for public actions.'
+    required: false
+    default: ${{ github.token }}
 runs:
   using: 'node20'
   pre: 'src/Pre.js'
