--- a/action.yml
+++ b/action.yml
@@ -36,7 +36,7 @@ inputs:
     required: false
     default: false
   github_token:
-    description: 'A token to access private actions. Does not required for public actions.'
+    description: A token to access private actions. Does not required for public actions.
     required: false
 outputs:
   outputs:
@@ -47,7 +47,7 @@ runs:
   steps:
     - name: retry
       id: retry
-      uses: Wandalen/wretry.action@v2.0.0_js_action
+      uses: Wandalen/wretry.action@v2.1.0_js_action
       with:
         action: '${{ inputs.action }}'
         command: '${{ inputs.command }}'
