--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "wretry.action",
-  "version": "3.0.0",
+  "version": "3.0.1",
   "description": "Retries an Github Action step on failure",
   "enabled": 0,
   "author": "Kostiantyn Wandalen <wandalen@obox.systems>",
@@ -45,6 +45,6 @@
     "src/Post.js",
     "src/Pre.js",
     "src/Retry.js",
-    "src/Runner.js"
+    "src/Runner.mjs"
   ]
 }
