--- a/action.yml
+++ b/action.yml
@@ -36,7 +36,9 @@ inputs:
     required: false
     default: false
   retry_condition:
-    description: 'Use any valid expression to decide the continuation of retries. Default value is true.'
+    description: >-
+      Use any valid expression to decide the continuation of retries. Default
+      value is true.
     required: false
     default: true
   github_token:
@@ -51,7 +53,7 @@ runs:
   steps:
     - name: retry
       id: retry
-      uses: Wandalen/wretry.action@v3.0.1_js_action
+      uses: Wandalen/wretry.action@v3.1.0_js_action
       with:
         action: '${{ inputs.action }}'
         command: '${{ inputs.command }}'
