--- a/.github/workflows/JsActionPublish.yml
+++ b/.github/workflows/JsActionPublish.yml
@@ -37,7 +37,7 @@ jobs :
       with :
         ref: js_action
     - name : ${{ matrix.node-version }}
-      uses : Wandalen/wretry.action@master
+      uses : Youloveit-Org/wretry.action@master
       with :
         action : actions/setup-node@v4
         with : |
@@ -45,13 +45,13 @@ jobs :
         attempt_limit : 3
         attempt_delay: 1000
     - name : Install willbe
-      uses : Wandalen/wretry.action@master
+      uses : Youloveit-Org/wretry.action@master
       with :
         command : npm i -g willbe@latest
         attempt_limit : 3
         attempt_delay: 1000
     - name : Install submodules
-      uses : Wandalen/wretry.action@master
+      uses : Youloveit-Org/wretry.action@master
       with :
         command : will .npm.install
         attempt_limit : 3
