--- a/.github/workflows/JobContextActionTest.yml
+++ b/.github/workflows/JobContextActionTest.yml
@@ -21,7 +21,7 @@ jobs :
     runs-on : ${{ matrix.os }}
     steps :
     - name : Run action with job status
-      uses : Wandalen/wretry.action@master
+      uses : Youloveit-Org/wretry.action@master
       with :
         action : dmvict/test.action@defaults_from_job_context
         attempt_limit : 3
