--- a/.github/workflows/wRetryActionPublish.yml
+++ b/.github/workflows/wRetryActionPublish.yml
@@ -10,8 +10,8 @@ jobs :
 
   job_context_test :
     if : "startsWith( github.event.head_commit.message, 'version' ) && startsWith( github.ref, 'refs/tags/v' )"
-    uses : Wandalen/wretry.action/.github/workflows/JobContextActionTest.yml@master
+    uses : Youloveit-Org/wretry.action/.github/workflows/JobContextActionTest.yml@master
 
   matrix_context_test :
     if : "startsWith( github.event.head_commit.message, 'version' ) && startsWith( github.ref, 'refs/tags/v' )"
-    uses : Wandalen/wretry.action/.github/workflows/MatrixContextActionTest.yml@master
+    uses : Youloveit-Org/wretry.action/.github/workflows/MatrixContextActionTest.yml@master
