--- a/.github/workflows/check-action-typing.yml
+++ b/.github/workflows/check-action-typing.yml
@@ -13,4 +13,4 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Check Action Typing
-        uses: typesafegithub/github-actions-typing@wip
+        uses: typesafegithub/github-actions-typing@v2
